# libc_rewrite

./: .gitignore  .pre-commit-config  CMakeLists.txt  LICENSE  README.md  build.bat  build.sh  main.c
.github/workflows/: cmake-tests-macos.yml  cmake-tests-ubuntu.yml  cmake-tests-windows.yml  cmake-ubuntu.yml
src/: CMakeLists.txt
src/concurrent/: common.h
src/concurrent/atomic/: CMakeLists.txt  atomic.h  common.h  fence.c  fence.h  memory_order.h  native.h
src/concurrent/thread/: CMakeLists.txt  common.h  native.c  native.h  thread.c  thread.h
src/construct/: CMakeLists.txt  bool_helpers.c  bool_helpers.h  characters_helpers.c  characters_helpers.h  data_model_helpers.c  data_model_helpers.h  numeric_helpers.c  numeric_helpers.h  primitives.h
src/containers/: CMakeLists.txt  array.h  common.h  dense_hash_set.h  string.h  string_impl.h  vector.h
src/containers/atomically_reference_counted/: CMakeLists.txt  atomically_reference_counted.h  common.h
src/containers/dynamic/: CMakeLists.txt  common.h
src/containers/interface/: CMakeLists.txt  common.h
src/containers/iterator/: CMakeLists.txt  iterator.h  iterator_methods_decl.h  iterator_types_decl.h
src/containers/optional/: CMakeLists.txt  optional.h
src/containers/pair/: CMakeLists.txt  pair.h
src/containers/reference_counted/: CMakeLists.txt  combined_ctrl_block.h  combined_ctrl_block_allocator.h  combined_ctrl_block_common.h  common.h  ctrl_block.h  ictrl_block.c  ictrl_block.h  rc.h  reference_counted.h  separated_ctrl_block.h  separated_ctrl_block_common.h  weak.h
src/containers/static/: CMakeLists.txt  common.h
src/encoding/: CMakeLists.txt  common.h
src/encoding/base64/: CMakeLists.txt  base64.c  base64.h
src/fs/file/: CMakeLists.txt  encoding.c  encoding.h
src/json/: CMakeLists.txt  common.h  json.h
src/json/serialize/: CMakeLists.txt  deserialization_errors.c  deserialization_errors.h  serialize.c  serialize.h
src/json/value/: CMakeLists.txt  value.c  value.h
src/memory/: CMakeLists.txt  common.h
src/memory/allocator/: CMakeLists.txt  allocator.h
src/memory/native/: native.c  native.h
src/network/: CMakeLists.txt  common.c  common.h
src/network/address_info/: address_info.c  address_info.h
src/network/client/: CMakeLists.txt  client.c  client.h  (+2 more)
src/primitives/: CMakeLists.txt  allocator.c  allocator.h  atomic.c  atomic.h  bool_type_alias.h  characters_types_aliases.h  data_model_types_aliases.h  fixed_size_types_aliases.h  limits.h  optional.c  optional.h  primitives.h  types_aliases.h  unsigned_types_aliases.h
src/process/: CMakeLists.txt  common.h  native.c  native.h
src/tests/: CMakeLists.txt  main.c
src/utils/: CMakeLists.txt  cformat.c  common.h  convert.h  debug.h  format.c  format.h  format_print.c  format_print.h  limits.h  macros.h  result.h  wformat.c
src/utils/array/: CMakeLists.txt  common.h  compare.c  compare.h
src/utils/character/: CMakeLists.txt  character.c  character.h  common.h
src/utils/comparator/: CMakeLists.txt  comparator.h
src/utils/string/: CMakeLists.txt  c_string_helpers.c  c_string_helpers.h  common.h  comparators_impl.c  comparators_impl.h  compare.c  compare.h  convert.c  convert.h  helpers.c  helpers.h  numeric_type_to_string_impl.c  numeric_type_to_string_impl.h  raw_string_helpers.c  raw_string_helpers.h
src/utils/string/raw_string/: CMakeLists.txt  common.h  compare.c  compare.h  convert.c  convert.h  helpers.h  length.c  length.h
tests/: CMakeLists.txt  main.c
tests/concurrent/: CMakeLists.txt
tests/concurrent/native_thread/: native_thread.c
tests/concurrent/thread/: CMakeLists.txt  int_atomically_increment_runnable.h  int_increment_runnable.h  thread.c  thread.h
tests/containers/: CMakeLists.txt
tests/containers/atomically_reference_counted/: CMakeLists.txt  atomically_reference_counted.h
tests/containers/dynamic/: CMakeLists.txt
tests/containers/dynamic/array/: CMakeLists.txt  array.c  array.h
tests/containers/dynamic/array_storage/: CMakeLists.txt  array_storage.c  array_storage.h
tests/containers/dynamic/string/: CMakeLists.txt  string.c
tests/containers/dynamic/tree/rb_tree/: CMakeLists.txt
tests/containers/dynamic/tree/rb_tree/map/: map.c  map.h
tests/containers/dynamic/tree/rb_tree/rb_tree_set/: rb_tree_set.c
tests/containers/dynamic/tree/rb_tree/set/: CMakeLists.txt  set.c
tests/containers/optional/: CMakeLists.txt  debug_context.h  optional.c  optional.h
tests/containers/reference_counted/: reference_counted.c
tests/containers/static/: CMakeLists.txt
tests/containers/static/string_view/: string_view.c  string_view.h
tests/encoding/base64/: CMakeLists.txt  base64.c  base64.h
tests/fs/: CMakeLists.txt
tests/fs/file/: encoding.c  encoding.h
tests/fs/file/utf_encoded_files/: utf8_BOM.txt
tests/json/: CMakeLists.txt
tests/json/deserialize/: CMakeLists.txt  deserialize.c  deserialize.h
tests/json/lexer/: CMakeLists.txt  lexer.c  lexer.h
tests/json/parser/: CMakeLists.txt  parser.c  parser.h
tests/json/serialize/: CMakeLists.txt  serialize.c  serialize.h
tests/json/value/: value.c  value.h
tests/network/address_info/: address_info.h
tests/network/client/: client.c
tests/network/nb_client/: CMakeLists.txt  nb_client.c
tests/network/nb_server/: nb_server.c
tests/network/server/: CMakeLists.txt  server.c
tests/network/socket/: CMakeLists.txt  socket.c  socket.h
tests/utils/: CMakeLists.txt  macros.c  macros.h
tests/utils/format/: format.h
tests/utils/result/: result.c
tests/utils/string/: CMakeLists.txt
tests/utils/string/convert/: CMakeLists.txt  convert.c  convert.h
tests/utils/string/raw_string/compare/: compare.h
tests/utils/string/raw_string/convert/: CMakeLists.txt  convert.c  convert.h
(+184 files in other folders)
